src/test/rustdoc-ui/test-compile-fail.stderr
error[E0428]: the name `f` is defined multiple times
 --> $DIR/test-compile-fail.rs:8:1
  |
6 | fn f() {}
  | ------ previous definition of the value `f` here
7 | 
8 | fn f() {}
  | ^^^^^^ `f` redefined here
  |
  = note: `f` must be defined only once in the value namespace of this module

error: aborting due to previous error

For more information about this error, try `rustc --explain E0428`.
