src/test/rustdoc-ui/test-compile-fail.rs
// compile-flags:--test

/// ```
/// assert!(true)
/// ```
fn f() {}

fn f() {}
